testing prod deploy

--- a/.github/workflows/build-comp.yaml
+++ b/.github/workflows/build-comp.yaml
@@ -16,6 +16,7 @@ jobs:
     env:
       OPENSHIFT_SERVER_URL: ${{secrets.OPENSHIFT_SERVER_URL}}
       OPENSHIFT_TOKEN_DEV: ${{secrets.OPENSHIFT_TOKEN_DEV}}
+      OPENSHIFT_TOKEN_PROD: ${{secrets.OPENSHIFT_TOKEN_PROD}}
       GHCR_USER: ${{ secrets.GHCR_USER }}
       GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
       DEBUG_DEPLOY: false
@@ -42,17 +43,30 @@ jobs:
     # if you provide the prod api key then deploy is to prod
     # if not its to dev.
     # prod deploys need dev AND prod token.
-    - uses: ./comp-actions/smk-deploy
+    # - name: deploying dev
+    #   uses: ./comp-actions/smk-deploy
+    #   id: deploySMKContainer
+    #   with:
+    #     OPENSHIFT_SERVER_URL: ${{ secrets.OPENSHIFT_SERVER_URL }}
+    #     OPENSHIFT_TOKEN_DEV: ${{ secrets.OPENSHIFT_TOKEN_DEV }}
+    #     GHCR_USER: ${{ secrets.GHCR_USER }}
+    #     GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
+    #     DOCKER_REGISTRY: 'docker.pkg.github.com'
+    #     PR_REVIEWERS: '["GuyTheFlower", "NicoledeGreef"]'
+    #     PR_MENTIONS: '["GuyTheFlower", "NicoledeGreef", "franTarkenton"]'
+
+    - name: deploying prod
+      uses: ./comp-actions/smk-deploy
       id: deploySMKContainer
       with:
         OPENSHIFT_SERVER_URL: ${{ secrets.OPENSHIFT_SERVER_URL }}
         OPENSHIFT_TOKEN_DEV: ${{ secrets.OPENSHIFT_TOKEN_DEV }}
+        OPENSHIFT_TOKEN_PROD: ${{ secrets.OPENSHIFT_TOKEN_PROD }}
         GHCR_USER: ${{ secrets.GHCR_USER }}
         GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
         DOCKER_REGISTRY: 'docker.pkg.github.com'
         PR_REVIEWERS: '["GuyTheFlower", "NicoledeGreef"]'
         PR_MENTIONS: '["GuyTheFlower", "NicoledeGreef", "franTarkenton"]'
-
 
 
 
