--- a/comp-actions/smk-deploy/action.yaml
+++ b/comp-actions/smk-deploy/action.yaml
@@ -88,6 +88,10 @@ runs:
       id: getIssueUrl
       shell: bash
       run: |
+        # Note: This should be done differently, ideally calculated upstream by the event
+        #       that calls this composite action, and then passed to the composite action 
+        #       as a parameter
+        #
         # extract the  issue url from the configmap $REPONAME-gh-issues-cm
         # ---------------------------------------------------------------------
         ISSUE_CONFIGMAP_NAME=${{ steps.getRepo.outputs.REPONAME }}-gh-issues-cm
@@ -235,6 +239,15 @@ runs:
       id: kongconf
       shell: bash
       run: |
+        function getUrl {
+          python3 - <<END
+          import json, sys, os
+          jsonObj = json.loads(os.environ['SERVICES'])
+          for obj in jsonObj:
+              if obj['name'] == os.environ['oc_service_name']:
+                  sys.stdout.write(f"https://{obj['env_host']}")
+          END
+        }
 
         # setting up a disable for prod for now as service seems a bit flakey atm
         env=$(python3 $GITHUB_ACTION_PATH/isEnvSet.py ${{ inputs.OPENSHIFT_TOKEN_PROD }})
@@ -334,15 +347,6 @@ runs:
           echo SERVICES $SERVICES
 
           # extract the url associated with the service
-          function getUrl {
-          python3 - <<END
-          import json, sys, os
-          jsonObj = json.loads(os.environ['SERVICES'])
-          for obj in jsonObj:
-              if obj['name'] == os.environ['oc_service_name']:
-                  sys.stdout.write(f"https://{obj['env_host']}")
-          END
-          }
           export oc_service_name
           echo oc_service_name $oc_service_name
           export SERVICES
