re-resting composite actions

--- a/.github/workflows/deploy_dev.yaml
+++ b/.github/workflows/deploy_dev.yaml
@@ -2,11 +2,11 @@
 name: "DEV Deploy"
 
 #TODO: once working change the event the action is associated to the one below
-on:
-  workflow_run:
-    workflows: ["BUILDPackage", "build"]
-    types: 
-      - completed
+# on:
+#   workflow_run:
+#     workflows: ["BUILDPackage", "build"]
+#     types: 
+#       - completed
 
 # on: 
 #   push:
