--- a/.github/workflows/deploy_prod.yaml
+++ b/.github/workflows/deploy_prod.yaml
@@ -6,12 +6,12 @@
 # https://github.community/t/run-action-only-when-a-pr-is-merged/18268
 
 # name: DEPLOYProd
-on:
-  pull_request:
-    branches: 
-      - master
-    types: 
-      - closed
+# on:
+#   pull_request:
+#     branches: 
+#       - master
+#     types: 
+#       - closed
       
 # debugging
 # on: 
