--- a/.github/workflows/deploy_dev.yaml
+++ b/.github/workflows/deploy_dev.yaml
@@ -7,7 +7,8 @@ on:
     workflows: ["BUILDPackage", "build"]
     types: 
       - completed
-
+        
+# used for debugging
 # on: 
 #   push:
 #     branches: ['dev', 'smk-cdci']
